@@ -68,6 +68,8 @@ Note that the following bug and feature requests are logged in GForge with relat
  * [#530] password change for user as Admin User
  ** UserAOImpl now has password change method changeAUserPasswordByAnAdmin
  
+ * [#775] iDrop 1.1.0 refactoring activities
+ ** add method to list resource names in zone
  ===========================
  
  
